# rpg_assistant

./: .gitignore  README.md  dvc.yaml  pyproject.toml
.dvc/: config
.github/ISSUE_TEMPLATE/: custom.md
config/: config.py  fireball.py  train.py
data/: .gitignore  config.py  fireball.dvc  fireball_postprocessed.dvc  fireball_tokenized.dvc  get_fireball_dataset.py
data/fireball/: 1_eda.ipynb  2_data_preparation.ipynb  EDA.ipynb  data_preparation.ipynb
docs/architecture/: rpg_assistant_architecture.drawio
model/: get_fireball_dataset.py
notebooks/deployment/: 1.test_deployment.ipynb
notebooks/fireball_dataset/: 2_eda_for_dataset_v1.ipynb  3_training_optimization.ipynb  4_check_inputs.ipynb
scripts/: config.py  fireball_preparation.py  model_registry.py  prepare_dataset.py  sagemaker_deployment.py  sagemaker_model_register.py  sagemaker_pipeline.py  sagemaker_training.py  train.py  utils.py
scripts/fireball/: 1_fireball_preprocessing.py  2_prepare_fireball_for_training.py
scripts/inference/: README.md  inference.py
scripts/sagemaker_scripts/: README.md  inference.py  train.py
scripts/training/: requirements.txt  train.py
src/: app.py  fireball_llm_inference.py
