[tool.poetry]
name = "rpg-assistant"
version = "0.1.0"
description = "An assistant built on top of LLMs capable of reproducing RPG stories."
authors = []
readme = "README.md"
packages = [{include = "rpg_assistant"}]

[tool.poetry.dependencies]
python = "^3.9"
datasets = "^2.13.1"
transformers = "^4.30.2"
dvc = {extras = ["s3"], version = "^3.5.1"}
peft = ">=0.4.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
poetry2setup = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
